@@ -1,3 +1,10 @@
+2011-09-15  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/utils.c:
+   Ask the user to configure a valid browser command if spawning it
+   fails rather than falling back to some arbitrary hardcoded defaults.
+
+
 2011-09-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/win32.c:
